# bibliothecarius

./: .editorconfig  .gitignore  README.md  jwt.plantuml  schema.plantuml
.github/workflows/: deploy-backend.yaml  deploy-frontend.yaml  deploy.yaml
backend/: .dockerignore  app.py  liara.json  pyproject.toml
backend/src/bibliothecarius_backend/: __init__.py  __main__.py  account.py  api.py  app.py  base.py  challenge.py  models.py  schemas.py
frontend/: .eslintignore  .xo-config.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: api.d.ts  async-effect.ts  backend.ts  force-update.ts  index.css  index.tsx  signal-record.ts  token.ts  vite-env.d.ts
frontend/src/components/: App.tsx  ChallengeForm.tsx  EditingEntry.tsx  EntryFields.tsx  EntryList.tsx  InsertingEntry.tsx  LogInForm.tsx  MainMenu.tsx  NestedEntry.tsx  ReadonlyEntry.tsx  SelectingEntry.tsx
